Bug 80397 - Intermittent wrong resoultion at boot
Summary: Intermittent wrong resoultion at boot
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Chris Wilson
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-23 12:50 UTC by trondsg+bugzilla+freedesktop
Modified: 2015-01-07 11:06 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log during this event (19.66 KB, text/plain)
2014-06-23 12:50 UTC, trondsg+bugzilla+freedesktop
no flags Details
xorg log when the correct resolution is detected (23.03 KB, text/plain)
2014-06-23 12:51 UTC, trondsg+bugzilla+freedesktop
no flags Details
Wait for DRM to finish loading (3.27 KB, patch)
2014-06-23 15:17 UTC, Chris Wilson
no flags Details | Splinter Review

Description trondsg+bugzilla+freedesktop 2014-06-23 12:50:53 UTC
Created attachment 101586 [details]
xorg log during this event

Randomly, every 10 to 50 boots the resolution is set incorrectly to 640x480 and cannot be changed (except by rebooting). The rest of the time the resolution is detected correctly.
Comment 1 trondsg+bugzilla+freedesktop 2014-06-23 12:51:26 UTC
Created attachment 101587 [details]
xorg log when the correct resolution is detected
Comment 2 Chris Wilson 2014-06-23 15:16:27 UTC
A dmesg from the bad start would be useful. It looks simply like X starts before the i915.ko is finished loading.
Comment 3 Chris Wilson 2014-06-23 15:17:12 UTC
Created attachment 101596 [details] [review]
Wait for DRM to finish loading

Untested patch to stall waiting for /dev/drm/card0
Comment 4 trondsg+bugzilla+freedesktop 2014-06-23 17:25:49 UTC
Thank you for your feedback. The next time it happens I will run dmesg > dmesg.log
 and upload the log here.
Comment 5 Chris Wilson 2014-06-24 11:33:58 UTC
I think with

commit f66e25def3431a900068cc1c23a6b1e8322ef046
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jun 23 16:14:28 2014 +0100

    intel: Wait for the DRM device to load
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=80397
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


commit 0c7cf7a6bb1c91b59ad326198f3364554e3dfeb5
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jun 24 11:50:55 2014 +0100

    intel: Wait for our expected device node to appear
    
    If the path we want to open for the KMS device is not yet available,
    wait a short while and try again.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=80397
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


I should have sufficient safeguards against this unlikely scenario. Once it happens again and you can attach the dmesg, please update xf86-video-intel.git and see if it catches any delayed device loads. (There should be an error in the log about waiting) Or if it fails to...
Comment 6 Chris Wilson 2015-01-07 11:06:46 UTC
Given 6 months have passed, I think we can assume this glitch has resolved itself.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.